MSBuildTasks: Add the 'none' SourceProvider
The 'none' source provider indicates there is no revision control. The revision control tasks are still run and still modify properties.

This is especially useful when providing `<RevisionControl>auto</RevisionControl>`, as if the provider can't be determined, the assumption is now that it is `none`.

The SourceFactory CreateAsync must now by marked as `async` to ensure that code is run at the right places within the try/catch block for automatic detection.

Issue: DOTNET-388

--- a/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
+++ b/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Infrastructure\SourceProvider\GitSourceFactory.cs" />
     <Compile Include="Infrastructure\SourceProvider\ISourceControl.cs" />
     <Compile Include="Infrastructure\SourceProvider\ISourceFactory.cs" />
+    <Compile Include="Infrastructure\SourceProvider\NoneProvider.cs" />
+    <Compile Include="Infrastructure\SourceProvider\NoneSourceFactory.cs" />
     <Compile Include="Infrastructure\SourceProvider\SourceFactory.cs" />
     <Compile Include="Infrastructure\SourceProvider\SourceProviderException.cs" />
     <Compile Include="Infrastructure\SourceProvider\UnknownSourceProviderException.cs" />
