MSBuildTasks: Be able to get revision control while packaging
Use $(MSBuildProjectDirectory) instead of $(ProjectDir) which is blank when packaging.

Issue: DOTNET-411

--- a/msbuild/buildtasks/buildtasks/package/tools/RJCP.MSBuildTasks.targets
+++ b/msbuild/buildtasks/buildtasks/package/tools/RJCP.MSBuildTasks.targets
@@ -48,7 +48,7 @@
   </Target>
 
   <Target Name="CoreRevisionControlCheck" >
-    <RevisionControl Type="$(RevisionControl)" Path="$(ProjectDir)"
+    <RevisionControl Type="$(RevisionControl)" Path="$(MSBuildProjectDirectory)"
                      Label="$(RevisionControlLabel)" Strict="$(RevisionControlStrict)"
                      Cached="$(RevisionControlCached)">
       <Output TaskParameter="RevisionControlType" PropertyName="RevisionControlType" />
