MSBuildTasks: Removing caching from the MSBuild Task
Caching in the library doesn't work as expected as the .NET build processes run for a long period of time. Despite having a mechanism to clear the cache, and that this is often run, it doesn't work all the time.

The best case is to always run the task when needed, but then only run the task if it needs to be run for the project.

Issue: DOTNET-412

--- a/msbuild/buildtasks/buildtasks/package/tools/RJCP.MSBuildTasks.targets
+++ b/msbuild/buildtasks/buildtasks/package/tools/RJCP.MSBuildTasks.targets
@@ -30,27 +30,14 @@
 
   <UsingTask TaskName="RJCP.MSBuildTasks.RevisionControl" AssemblyFile="$(_RJCP_MSBuildTasksAssembly)" />
   <UsingTask TaskName="RJCP.MSBuildTasks.SemVer" AssemblyFile="$(_RJCP_MSBuildTasksAssembly)" />
-  <UsingTask TaskName="RJCP.MSBuildTasks.RevisionControlClearCache" AssemblyFile="$(_RJCP_MSBuildTasksAssembly)" />
 
   <!-- The main target to hook into the build system automatically -->
   <Target Name="RevisionControlCheck" DependsOnTargets="$(RevisionControlDependsOn)"
           BeforeTargets="$(BeforeRevisionControl)" Condition="'$(RevisionControl)' != ''" />
 
-  <!-- Clear the revision control cache for this project once, no matter how
-       many frameworks we build at the start of building. -->
-  <Target Name="ClearRevisionControlCheck" BeforeTargets="DispatchToInnerBuilds;BeforeBuild">
-    <MSBuild Projects="$(MSBuildThisFileDirectory)$(MSBuildThisFile)"
-             Targets="ClearRevisionControlCheckInner" Properties="TargetFramework=once" />
-  </Target>
-
-  <Target Name="ClearRevisionControlCheckInner">
-    <RevisionControlClearCache/>
-  </Target>
-
   <Target Name="CoreRevisionControlCheck" >
     <RevisionControl Type="$(RevisionControl)" Path="$(MSBuildProjectDirectory)"
-                     Label="$(RevisionControlLabel)" Strict="$(RevisionControlStrict)"
-                     Cached="$(RevisionControlCached)">
+                     Label="$(RevisionControlLabel)" Strict="$(RevisionControlStrict)">
       <Output TaskParameter="RevisionControlType" PropertyName="RevisionControlType" />
       <Output TaskParameter="RevisionControlBranch" PropertyName="RevisionControlBranch" />
       <Output TaskParameter="RevisionControlCommit" PropertyName="RevisionControlCommit" />
