--- a/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
+++ b/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
@@ -17,7 +17,7 @@
     <Copyright>(C) 2018-2021, Jason Curl</Copyright>
     <Company></Company>
     <Description>MSBuild Tasks for RJCP Framework Libraries.</Description>
-    <Version>0.2.1</Version>
+    <Version>0.2.2</Version>
 
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
@@ -84,7 +84,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="RevisionControl.cs" />
-    <Compile Include="RevisionControlClearCache.cs" />
     <Compile Include="SemVer.cs" />
     <Compile Include="X509SignAuthenticode.cs" />
     <Compile Include="X509ThumbPrint.cs" />
@@ -134,7 +133,6 @@
        only runs in release mode, otherwise we have a cyclic dependency. -->
   <UsingTask TaskName="RJCP.MSBuildTasks.RevisionControl" AssemblyFile="$(_RJCP_MSBuildTasksAssembly)" />
   <UsingTask TaskName="RJCP.MSBuildTasks.SemVer" AssemblyFile="$(_RJCP_MSBuildTasksAssembly)" />
-  <UsingTask TaskName="RJCP.MSBuildTasks.RevisionControlClearCache" AssemblyFile="$(_RJCP_MSBuildTasksAssembly)" />
 
   <PropertyGroup>
     <BeforeRevisionControl>
@@ -145,18 +143,8 @@
     </BeforeRevisionControl>
   </PropertyGroup>
 
-  <!-- Because RevisionControl caches its findings, we need to make sure that
-       when we start the build, our cache is clear.-->
-  <Target Name="ClearRevisionControlCheck" BeforeTargets="DispatchToInnerBuilds;BeforeBuild" Condition="'$(Configuration)' == 'Release'">
-    <MSBuild Projects="$(MSBuildProjectFile)" Targets="ClearRevisionControlCheckInner" Properties="TargetFramework=once" />
-  </Target>
-
-  <Target Name="ClearRevisionControlCheckInner">
-    <RevisionControlClearCache />
-  </Target>
-
   <Target Name="CoreRevisionControlCheck" BeforeTargets="$(BeforeRevisionControl)" Condition="'$(Configuration)' == 'Release' and '$(RevisionControl)' != ''">
-    <RevisionControl Type="$(RevisionControl)" Path="$(MSBuildThisFileDirectory)" Label="$(RevisionControlLabel)" Strict="$(RevisionControlStrict)" Cached="$(RevisionControlCached)">
+    <RevisionControl Type="$(RevisionControl)" Path="$(MSBuildThisFileDirectory)" Label="$(RevisionControlLabel)" Strict="$(RevisionControlStrict)">
       <Output TaskParameter="RevisionControlType" PropertyName="RevisionControlType" />
       <Output TaskParameter="RevisionControlBranch" PropertyName="RevisionControlBranch" />
       <Output TaskParameter="RevisionControlCommit" PropertyName="RevisionControlCommit" />
