MSBuildTasks: Upgrade to version 0.2.2
Fixes issues when building packages and removes caching for correct builds

--- a/.gitmodules
+++ b/.gitmodules
@@ -51,3 +51,6 @@
 [submodule "framework/bufferio"]
 	path = framework/bufferio
 	url = ../rjcp.dll.bufferio.git
+    branch = master
+	ignore = untracked
+	
