--- a/.editorconfig
+++ b/.editorconfig
@@ -195,3 +195,12 @@ dotnet_naming_style.begins_with_i.required_prefix = I
 dotnet_naming_style.begins_with_i.required_suffix = 
 dotnet_naming_style.begins_with_i.word_separator = 
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
+
+#### Sonar Lint Rules Disabling ####
+
+dotnet_diagnostic.S101.severity = none          # Rename to match Pascal rules
+dotnet_diagnostic.S1066.severity = none         # Merge if statement with previous statement
+dotnet_diagnostic.S2346.severity = none         # Rename enum value to None
+dotnet_diagnostic.S2699.severity = none         # Add at least one assertion to this test case
+dotnet_diagnostic.S4070.severity = none         # Remove the 'FlagsAttribute' from this enum
+dotnet_diagnostic.S4136.severity = none         # All method overloads should be adjacent
