Threading: Add a library that provides a ITask interface
Issue: DOTNET-483

--- a/.gitmodules
+++ b/.gitmodules
@@ -68,3 +68,8 @@
 	url = ../RJCP.DLL.Log.git
 	branch = master
 	ignore = untracked
+[submodule "framework/thread"]
+	path = framework/thread
+	url = ../RJCP.DLL.Thread.git
+	branch = master
+	ignore = untracked
