--- a/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.nuspec
+++ b/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.nuspec
@@ -8,6 +8,7 @@
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/jcurl</projectUrl>
     <developmentDependency>true</developmentDependency>
+    <readme>README.md</readme>
     <dependencies>
       <group targetFramework=".NETStandard1.0" />
       <group targetFramework=".NETFramework4.0" />
@@ -24,5 +25,6 @@
     <file src="package\tools\RJCP.MSBuildTasks.targets" target="tools\" />
     <file src="bin\Release\net48\RJCP.MSBuildTasks.dll" target="tools\net48\" />
     <file src="bin\Release\netstandard2.1\RJCP.MSBuildTasks.dll" target="tools\netstandard2.1\" />
+    <file src="../README.md" target="README.md" />
   </files>
 </package>
