--- a/.editorconfig
+++ b/.editorconfig
@@ -252,7 +252,11 @@ dotnet_naming_style.begins_with_i.required_suffix =
 dotnet_naming_style.begins_with_i.word_separator = 
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
 
-#### Sonar Lint Rules Disabling ####
+#### Code Anlaysis Rules Disabling
+
+dotnet_diagnostic.CA1859.severity = none        # Change type of variable for performance
+
+#### Sonar Lint Rules Disabling
 
 dotnet_diagnostic.S101.severity = none          # Rename to match Pascal rules
 dotnet_diagnostic.S125.severity = none          # Remove commented out code
@@ -263,6 +267,7 @@ dotnet_diagnostic.S2344.severity = none         # Rename the enumeration to remo
 dotnet_diagnostic.S2346.severity = none         # Rename enum value to None
 dotnet_diagnostic.S2699.severity = none         # Add at least one assertion to this test case
 dotnet_diagnostic.S3218.severity = none         # Rename this method to not shadow the outer class with the same name
+dotnet_diagnostic.S3267.severity = none         # Use LINQ loop Where simplification
 dotnet_diagnostic.S3358.severity = none         # Extract this nested ternary operator into an independent statement
 dotnet_diagnostic.S4070.severity = none         # Remove the 'FlagsAttribute' from this enum
 dotnet_diagnostic.S4136.severity = none         # All method overloads should be adjacent
