--- a/msbuild/buildtasks/buildtasksproj/RJCP.BuildTasksProj.csproj
+++ b/msbuild/buildtasks/buildtasksproj/RJCP.BuildTasksProj.csproj
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <Project Sdk="Microsoft.NET.Sdk">
-
   <Import Project="build\revisioncontrol.props" />
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net60</TargetFramework>
     <OutputType>Exe</OutputType>
     <!-- <IsPackable>false</IsPackable> -->
     <Configurations>Debug;Release</Configurations>
     <NeutralLanguage>en-US</NeutralLanguage>
+    <RollForward>Major</RollForward>
 
     <AssemblyName>RJCP.MSBuildProj</AssemblyName>
     <AssemblyTitle>RJCP.MSBuildProj</AssemblyTitle>
@@ -17,9 +16,8 @@
     <RootNamespace>RJCP.MSBuidlProj</RootNamespace>
 
     <Authors>Jason Curl</Authors>
-    <Copyright>(C) 2018-2021, Jason Curl</Copyright>
+    <Copyright>(C) 2018-2024, Jason Curl</Copyright>
     <Company></Company>
-
     <Description>Test Application using RJCP.MSBuildTasks.</Description>
     <Version>1.0.0</Version>
 
@@ -75,5 +73,4 @@
 
   <Import Project="build\x509sign.targets" />
   <Import Project="build\revisioncontrol.targets" />
-
 </Project>
