--- a/.editorconfig
+++ b/.editorconfig
@@ -26,47 +26,47 @@ indent_size = 2
 [*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
 indent_size = 2
 
-# C# files
+# C# files #####################################################################
 [*.cs]
 
-#### Core EditorConfig Options ####
+## Core EditorConfig Options ####
 
-# Indentation and spacing
+### Indentation and spacing
 indent_size = 4
 indent_style = space
 tab_width = 4
 
-# New line preferences
+### New line preferences
 #end_of_line = crlf
 insert_final_newline = true
 
-#### .NET Coding Conventions ####
+## .NET Coding Conventions ####
 
-# Organize usings
+### Organize usings
 dotnet_separate_import_directive_groups = false
 dotnet_sort_system_directives_first = true
 file_header_template = unset
 
-# this. and Me. preferences
+### this. and Me. preferences
 dotnet_style_qualification_for_event = false:silent
 dotnet_style_qualification_for_field = false:silent
 dotnet_style_qualification_for_method = false:silent
 dotnet_style_qualification_for_property = false:silent
 
-# Language keywords vs BCL types preferences
+### Language keywords vs BCL types preferences
 dotnet_style_predefined_type_for_locals_parameters_members = true:silent
 dotnet_style_predefined_type_for_member_access = true:silent
 
-# Parentheses preferences
+### Parentheses preferences
 dotnet_style_parentheses_in_arithmetic_binary_operators = always_for_clarity:silent
 dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:silent
 dotnet_style_parentheses_in_other_operators = never_if_unnecessary:silent
 dotnet_style_parentheses_in_relational_binary_operators = always_for_clarity:silent
 
-# Modifier preferences
+### Modifier preferences
 dotnet_style_require_accessibility_modifiers = for_non_interface_members:silent
 
-# Expression-level preferences
+### Expression-level preferences
 dotnet_style_namespace_match_folder = true:warning
 dotnet_style_coalesce_expression = true:suggestion
 dotnet_style_collection_initializer = true:suggestion
@@ -84,28 +84,29 @@ dotnet_style_prefer_inferred_tuple_names = true:suggestion
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
 dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
 dotnet_style_prefer_simplified_interpolation = true:suggestion
+dotnet_style_prefer_collection_expression = false                    # IDE0028, IDE0300-IDE0305 (C#12, .NET 8.0+)
 
-# Field preferences
+### Field preferences
 dotnet_style_readonly_field = true:suggestion
 
-# Parameter preferences
+### Parameter preferences
 dotnet_code_quality_unused_parameters = non_public:suggestion
 
-# Suppression preferences
+### Suppression preferences
 dotnet_remove_unnecessary_suppression_exclusions = none
 
-# New line preferences
+### New line preferences
 dotnet_style_allow_multiple_blank_lines_experimental = false:suggestion
 dotnet_style_allow_statement_immediately_after_block_experimental = true
 
-#### C# Coding Conventions ####
+## C# Coding Conventions ####
 
-# var preferences
+### var preferences
 csharp_style_var_elsewhere = false:silent
 csharp_style_var_for_built_in_types = false:silent
 csharp_style_var_when_type_is_apparent = false:silent
 
-# Expression-bodied members
+### Expression-bodied members
 csharp_style_expression_bodied_accessors = false:silent
 csharp_style_expression_bodied_constructors = false:silent
 csharp_style_expression_bodied_indexers = false:silent
@@ -115,7 +116,7 @@ csharp_style_expression_bodied_methods = false:silent
 csharp_style_expression_bodied_operators = false:silent
 csharp_style_expression_bodied_properties = false:silent
 
-# Pattern matching preferences
+### Pattern matching preferences
 csharp_style_pattern_matching_over_as_with_null_check = true:suggestion
 csharp_style_pattern_matching_over_is_with_cast_check = true:suggestion
 csharp_style_prefer_extended_property_pattern = true:suggestion
@@ -123,18 +124,18 @@ csharp_style_prefer_not_pattern = true:suggestion
 csharp_style_prefer_pattern_matching = true:suggestion
 csharp_style_prefer_switch_expression = false:suggestion
 
-# Null-checking preferences
+### Null-checking preferences
 csharp_style_conditional_delegate_call = false:suggestion
 
-# Modifier preferences
+### Modifier preferences
 csharp_prefer_static_local_function = true:suggestion
 csharp_preferred_modifier_order = public,private,protected,internal,file,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,required,volatile,async
 
-# Code-block preferences
+### Code-block preferences
 csharp_prefer_braces = true:silent
 csharp_prefer_simple_using_statement = false:suggestion
 
-# Expression-level preferences
+### Expression-level preferences
 csharp_style_namespace_declarations = block_scoped:warning
 csharp_style_prefer_method_group_conversion = true:suggestion
 csharp_style_prefer_top_level_statements = false:suggestion
@@ -153,19 +154,25 @@ csharp_style_inlined_variable_declaration = true:suggestion
 csharp_style_throw_expression = false:suggestion
 csharp_prefer_simple_default_expression = true:suggestion
 
-# 'using' directive preferences
-csharp_using_directive_placement = inside_namespace:silent       # Don't want this for Windows Forms, but otherwise, yes
+### 'using' directive preferences
+csharp_using_directive_placement = inside_namespace:silent           # Don't want this for Windows Forms, but otherwise, yes
 
-# New line preferences
+### New line preferences
 csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true
 csharp_style_allow_blank_line_after_token_in_arrow_expression_clause_experimental = true
 csharp_style_allow_blank_line_after_token_in_conditional_expression_experimental = true
 csharp_style_allow_blank_lines_between_consecutive_braces_experimental = false:suggestion
 csharp_style_allow_embedded_statements_on_same_line_experimental = true
 
-#### C# Formatting Rules ####
+### Primary Constructors
+csharp_style_prefer_primary_constructors = false                     # IDE0290 (C#12, .NET 8.0+)
 
-# New line preferences
+### Lambdas
+csharp_style_prefer_method_group_conversion = false                  # IDE0200 (C#12, .NET 8.0+)
+
+## C# Formatting Rules ####
+
+### New line preferences
 csharp_new_line_before_catch = false
 csharp_new_line_before_else = false
 csharp_new_line_before_finally = false
@@ -174,7 +181,7 @@ csharp_new_line_before_members_in_object_initializers = false
 csharp_new_line_before_open_brace = accessors,methods,properties,types
 csharp_new_line_between_query_expression_clauses = false
 
-# Indentation preferences
+### Indentation preferences
 csharp_indent_block_contents = true
 csharp_indent_braces = false
 csharp_indent_case_contents = true
@@ -182,7 +189,7 @@ csharp_indent_case_contents_when_block = false
 csharp_indent_labels = one_less_than_current
 csharp_indent_switch_labels = false
 
-# Space preferences
+### Space preferences
 csharp_space_after_cast = false
 csharp_space_after_colon_in_inheritance_clause = true
 csharp_space_after_comma = true
@@ -206,72 +213,64 @@ csharp_space_between_method_declaration_parameter_list_parentheses = false
 csharp_space_between_parentheses = false
 csharp_space_between_square_brackets = false
 
-# Wrapping preferences
+### Wrapping preferences
 csharp_preserve_single_line_blocks = true
 csharp_preserve_single_line_statements = true
 
-#### Naming styles ####
+## Naming styles ####
 
-# Naming rules
-
+### Naming rules
 dotnet_naming_rule.interface_should_be_begins_with_i.severity = warning
 dotnet_naming_rule.interface_should_be_begins_with_i.symbols = interface
 dotnet_naming_rule.interface_should_be_begins_with_i.style = begins_with_i
-
 dotnet_naming_rule.types_should_be_pascal_case.severity = suggestion
 dotnet_naming_rule.types_should_be_pascal_case.symbols = types
 dotnet_naming_rule.types_should_be_pascal_case.style = pascal_case
-
 dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = suggestion
 dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
 dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
 
-# Symbol specifications
-
+### Symbol specifications
 dotnet_naming_symbols.interface.applicable_kinds = interface
 dotnet_naming_symbols.interface.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
 dotnet_naming_symbols.interface.required_modifiers = 
-
 dotnet_naming_symbols.types.applicable_kinds = class, struct, interface, enum
 dotnet_naming_symbols.types.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
 dotnet_naming_symbols.types.required_modifiers = 
-
 dotnet_naming_symbols.non_field_members.applicable_kinds = property, event, method
 dotnet_naming_symbols.non_field_members.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
 dotnet_naming_symbols.non_field_members.required_modifiers = 
 
-# Naming styles
-
+### Naming styles
 dotnet_naming_style.pascal_case.required_prefix = 
 dotnet_naming_style.pascal_case.required_suffix = 
 dotnet_naming_style.pascal_case.word_separator = 
 dotnet_naming_style.pascal_case.capitalization = pascal_case
-
 dotnet_naming_style.begins_with_i.required_prefix = I
 dotnet_naming_style.begins_with_i.required_suffix = 
 dotnet_naming_style.begins_with_i.word_separator = 
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
 
-#### Code Anlaysis Rules Disabling
+## Code Anlaysis Rules Disabling
 
-dotnet_diagnostic.CA1859.severity = none        # Change type of variable for performance
+### Performance
+dotnet_diagnostic.CA1859.severity = none                             # Change type of variable for performance
 
-#### Sonar Lint Rules Disabling
+## Sonar Lint Rules Disabling
+dotnet_diagnostic.S101.severity = none                               # Rename to match Pascal rules
+dotnet_diagnostic.S125.severity = none                               # Remove commented out code
+dotnet_diagnostic.S1066.severity = none                              # Merge if statement with previous statement
+dotnet_diagnostic.S1168.severity = none                              # Return an empty collection instead of null
+dotnet_diagnostic.S1905.severity = none                              # Remove this unnecessary cast
+dotnet_diagnostic.S2344.severity = none                              # Rename the enumeration to remove the Flags suffix
+dotnet_diagnostic.S2346.severity = none                              # Rename enum value to None
+dotnet_diagnostic.S2699.severity = none                              # Add at least one assertion to this test case
+dotnet_diagnostic.S3218.severity = none                              # Rename this method to not shadow the outer class with the same name
+dotnet_diagnostic.S3236.severity = none                              # Argument for the method hides caller information
+dotnet_diagnostic.S3267.severity = none                              # Use LINQ loop Where simplification
+dotnet_diagnostic.S3358.severity = none                              # Extract this nested ternary operator into an independent statement
+dotnet_diagnostic.S4070.severity = none                              # Remove the 'FlagsAttribute' from this enum
+dotnet_diagnostic.S4136.severity = none                              # All method overloads should be adjacent
 
-dotnet_diagnostic.S101.severity = none          # Rename to match Pascal rules
-dotnet_diagnostic.S125.severity = none          # Remove commented out code
-dotnet_diagnostic.S1066.severity = none         # Merge if statement with previous statement
-dotnet_diagnostic.S1168.severity = none         # Return an empty collection instead of null
-dotnet_diagnostic.S1905.severity = none         # Remove this unnecessary cast
-dotnet_diagnostic.S2344.severity = none         # Rename the enumeration to remove the Flags suffix
-dotnet_diagnostic.S2346.severity = none         # Rename enum value to None
-dotnet_diagnostic.S2699.severity = none         # Add at least one assertion to this test case
-dotnet_diagnostic.S3218.severity = none         # Rename this method to not shadow the outer class with the same name
-dotnet_diagnostic.S3267.severity = none         # Use LINQ loop Where simplification
-dotnet_diagnostic.S3358.severity = none         # Extract this nested ternary operator into an independent statement
-dotnet_diagnostic.S4070.severity = none         # Remove the 'FlagsAttribute' from this enum
-dotnet_diagnostic.S4136.severity = none         # All method overloads should be adjacent
-
-#### NUnit.Analyzer Rules
-
-dotnet_diagnostic.NUnit2045.severity = none     # Call independent Assert statements from inside an Assert.Multiple
+## NUnit.Analyzer Rules
+dotnet_diagnostic.NUnit2045.severity = none                          # Call independent Assert statements from inside an Assert.Multiple
