--- a/RJCP.Sandcastle.Plugin/HelpId/RJCP.Sandcastle.Plugin.HelpId.csproj
+++ b/RJCP.Sandcastle.Plugin/HelpId/RJCP.Sandcastle.Plugin.HelpId.csproj
@@ -57,6 +57,7 @@
 
   <ItemGroup>
     <Compile Include="HelpIdPlugIn.cs" />
+    <Compile Include="IgnoreDuplicateComponentsPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Topics\ParentTopic.cs" />
     <Compile Include="Topics\HelpTopicFile.cs" />
